# capture_input_output

./: README.md  main_bak.dart  main_bak2.dart  new.dart  pubspec.yaml  rk3588.md
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
apps/: compact_log.txt
assets/: msa_dpcrn.onnx  msa_dpcrn_fast.onnx  record_input.pcm  record_output.pcm
build_clibs/: Android.mk  Application.mk  CMakeLists.txt  build.bat  signal_processing_library.c  signal_processing_library.h  spl.h
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: caputure_input.dart  caputure_output.dart  main.dart  main2.dart  main_bak.dart  main_onlyrecord.dart  stream_utils.dart  test_utils.dart  textInput.dart  text_painter_button.dart  waveform_painter.dart
lib/utils/: cutils.dart  cutils2.dart  dartUtils.dart  dummy.dart  msadpcrn.dart  msadpcrn2.dart  msadpcrnRknn.dart  type_converter.dart
plugins/import_rknn/: README.md  pubspec.yaml
plugins/import_rknn/android/: build.gradle  settings.gradle
plugins/import_rknn/example/: README.md  pubspec.yaml
plugins/import_rknn/lib/: import_rknn.dart  import_rknn_method_channel.dart  import_rknn_platform_interface.dart
plugins/import_rknn/test/: import_rknn_method_channel_test.dart  import_rknn_test.dart
plugins/system_audio_recorder/: pubspec.yaml
plugins/system_audio_recorder/lib/: system_audio_recorder.dart  system_audio_recorder_method_channel.dart  system_audio_recorder_platform_interface.dart
test/: test_qmf.dart  widget_test.dart
web/: index.html  manifest.json
(+22 files in other folders)
